feat: criar header com estrutura HTML e estilos CSS

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 <body>
 
-    <header>
-        <h1>FinanceCompany</h1>
-        <nav>
-            <a href="index.html">Início</a>
-            <a href="emprestimos.html">Empréstimos</a>
-            <a href="seja-cliente.html">Seja nosso cliente</a>
-        </nav>
+        <!-- Header -->
+    <header class="header">
+        <div class="header-content">
+            <div class="logo">
+                <div class="logo-icon">$</div>
+                <span class="logo-text">FinanceCompany</span>
+            </div>
+            <nav class="header-nav">
+                <a href="#">Início</a>
+                <a href="#">Empréstimos</a>
+                <a href="#">Seja nosso cliente</a>
+            </nav>
+        </div>
     </header>
 
     <main>
