feat(services): implementar estrutura e estilos da seção de serviços

--- a/index.html
+++ b/index.html
@@ -46,6 +46,85 @@
                 </a>
             </nav>
         </aside>
+
+        <main class="main-content">
+            <!-- Seção de Seleção -->
+             <section class="hero">
+                <div class="hero-content">  
+                    <div class="hero-text">
+                        <h1 class="hero-title">Empréstimos com juros a partir de 1,2% ao mês!</h1>
+                        <p class="hero-description">Soluções financeiras personalizadas para você e sua empresa
+                        </p>
+                        <a href="#" class="btn">Solicitar agora</a>
+                    </div>
+                    <div class="hero-image">
+                        <!-- IMG  -->
+                    </div>
+                </div>
+             </section>
+
+             <!-- Seção de Serviços -->
+              <section class="services">
+                <div class="services-content">
+                    <div class="services-grind">
+                        <!-- Empréstimos -->
+                         <div class="service-card">
+                            <div class="service.icon">
+                                <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path>
+                                </svg>
+                            </div>
+                            <h3 class="service-title">Empréstimos</h3>
+                            <p class="service-description">Empréstimos pessoais e empresariais com as melhores taxas do mercado.</p>
+                            <p class="service-text">Aprovação rápida e sem burocracia. Parcelas que cabem no seu bolso.</p>
+                            <a href="#" class="btn-ghost">
+                                Saiba mais
+                                <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                        </div>
+
+                        <!-- Financiamentos -->
+                         <div class="service-card">
+                            <div class="service-icon">
+                             <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path>
+                                </svg>
+                            </div>
+                            <h3 class="service-title">Financiamentos</h3>
+                            <p class="service-description">Financiamentos para aquisição de bens e expansão de negócios.</p>
+                            <p class="service-text">Condições especiais para financiamento de veículos, imóveis e equipamentos.</p>
+                            <a href="#" class="btn-ghost">
+                                Saiba mais
+                                <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                        </div>
+
+                        <!-- Antecipação de recebíveis -->
+                         <div class="service-card">
+                            <div class="service-icon">
+                              <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path>
+                                </svg>
+                            </div>
+                            <h3 class="service-title">Antecipação de recebíveis</h3>
+                            <p class="service-description">Transforme suas vendas a prazo em dinheiro na hora.</p>
+                            <p class="service-text">Antecipe cartões, duplicatas e cheques com taxas competitivas.</p>
+                            <a href="#" class="btn-ghost">
+                                Saiba mais
+                                <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+              </section>
+        </main>
     </div>
 
     <main>
