Finalização do projeto: site da empresa de finanças com HTML e CSS, imagens e links conforme wireframes.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
                 <span class="logo-text">FinanceCompany</span>
             </div>
             <nav class="header-nav">
-                <a href="#">Início</a>
-                <a href="#">Empréstimos</a>
-                <a href="#">Seja nosso cliente</a>
+                <a href="index.html">Início</a>
+                <a href="emprestimos.html">Empréstimos</a>
+                <a href="seja-cliente.html">Seja nosso cliente</a>
             </nav>
         </div>
     </header>
 
     <div class="main-layout">
+        <!-- Sidebar -->
         <aside class="sidebar">
             <nav class="sidebar-nav">
                 <a href="#" class="sidebar-link">
@@ -59,6 +60,10 @@
                     </div>
                     <div class="hero-image">
                         <!-- IMG  -->
+                         <div class="imagem-box">
+    <img src="img/mg_2.avif" alt="Imagem exemplo">
+</div>
+
                     </div>
                 </div>
              </section>
